// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Tag Clickable 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc hSiBVy sc-FBwyV jeQdCq"
    >
      <button
        class="StyledButton-sc-323bzc-0 dDXISN sc-bqqNGx sc-bjLpWZ fLtAMU fslEki sc-dILjMz hHsOxK"
        type="button"
      >
        <div
          class="sc-gKkhHZ cxMPyI sc-iCEByO gQMsVC sc-hHopXc sc-cljKOb hSiBVy dNgXns"
        >
          <div
            class="sc-fKwCjr ilBSZT sc-bCgmGQ bUddEz"
          >
            Tag: 
          </div>
          <div
            class="sc-fKwCjr fJnwxC sc-bCgmGQ bUddEz"
          >
            Value
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Closable 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc hSiBVy sc-FBwyV jeQdCq"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gQMsVC sc-hHopXc sc-cljKOb hSiBVy dNgXns"
      >
        <div
          class="sc-fKwCjr ilBSZT sc-bCgmGQ bUddEz"
        >
          Tag: 
        </div>
        <div
          class="sc-fKwCjr fJnwxC sc-bCgmGQ bUddEz"
        >
          Value
        </div>
      </div>
      <button
        class="StyledButton-sc-323bzc-0 dDXISN sc-bqqNGx sc-bjLpWZ fLtAMU fslEki sc-dILjMz kjXeUX sc-fbtecg kDQhZK"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc hSiBVy sc-FBwyV jeQdCq"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gQMsVC sc-hHopXc sc-cljKOb hSiBVy dNgXns"
      >
        <div
          class="sc-fKwCjr ilBSZT sc-bCgmGQ bUddEz"
        >
          Tag: 
        </div>
        <div
          class="sc-fKwCjr fJnwxC sc-bCgmGQ bUddEz"
        >
          Value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Empty 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc hSiBVy sc-FBwyV jeQdCq"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gQMsVC sc-hHopXc sc-cljKOb hSiBVy dNgXns"
      >
        <div
          class="sc-fKwCjr ZRUSd sc-bCgmGQ bUddEz"
        >
          no value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Multiple Values 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc hSiBVy sc-FBwyV jeQdCq"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gQMsVC sc-hHopXc sc-cljKOb hSiBVy dNgXns"
      >
        <div
          class="sc-fKwCjr ilBSZT sc-bCgmGQ bUddEz"
        >
          Tag1 contains 
        </div>
        <div
          class="sc-fKwCjr fJnwxC sc-bCgmGQ bUddEz"
        >
          value1
        </div>
        <div
          class="sc-fKwCjr OaQel sc-bCgmGQ bUddEz"
        >
            or  
        </div>
        <div
          class="sc-fKwCjr ilBSZT sc-bCgmGQ bUddEz"
        >
          Tag2 contains 
        </div>
        <div
          class="sc-fKwCjr fJnwxC sc-bCgmGQ bUddEz"
        >
          value2
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Only Name 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc hSiBVy sc-FBwyV jeQdCq"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gQMsVC sc-hHopXc sc-cljKOb hSiBVy dNgXns"
      >
        <div
          class="sc-fKwCjr fJnwxC sc-bCgmGQ bUddEz"
        >
          Name
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Only Value 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc hSiBVy sc-FBwyV jeQdCq"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gQMsVC sc-hHopXc sc-cljKOb hSiBVy dNgXns"
      >
        <div
          class="sc-fKwCjr fJnwxC sc-bCgmGQ bUddEz"
        >
          Value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tag Overflow 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gKkhHZ cxMPyI sc-iCEByO eQSjnd sc-hHopXc hSiBVy sc-FBwyV jeQdCq"
    >
      <div
        class="sc-gKkhHZ cxMPyI sc-iCEByO gQMsVC sc-hHopXc sc-cljKOb hSiBVy dNgXns"
      >
        <div
          class="sc-fKwCjr ilBSZT sc-bCgmGQ bUddEz"
        >
          Tag1 contains 
        </div>
        <div
          class="sc-fKwCjr fJnwxC sc-bCgmGQ bUddEz"
        >
          value1
        </div>
        <div
          class="sc-fKwCjr ilBSZT sc-bCgmGQ bUddEz"
        >
          ... and 3 more
        </div>
      </div>
    </div>
  </div>
</div>
`;
